# aoc-rust

./: Cargo.toml  README.md  new-day-2023.sh
2023/01/: Cargo.toml
2023/01/src/: data.rs  puzzle.rs
2023/02/: Cargo.toml
2023/02/src/: puzzle.rs
2023/03/: Cargo.toml
2023/03/src/: puzzle.rs
2023/04/: Cargo.toml
2023/04/src/: main.rs  puzzle.rs
2023/05/: Cargo.toml
2023/05/src/: data.rs  puzzle.rs
2023/06/: Cargo.toml
2023/06/src/: puzzle.rs
2023/07/: Cargo.toml
2023/07/src/: card.rs  main.rs  puzzle.rs
2023/08/: Cargo.toml
2023/08/src/: data.rs  direction.rs  instructions.rs  main.rs  nodes.rs  puzzle.rs  state.rs
2023/09/: Cargo.toml
2023/09/src/: history.rs  main.rs  puzzle.rs
2024/01/: Cargo.toml
2024/01/src/: 01.rs  bag.rs
2024/02/: Cargo.toml
2024/02/src/: 02.rs
2024/03/: Cargo.toml
2024/03/src/: 03.rs  parse.rs
2024/04/: Cargo.toml
2024/04/src/: 04.rs
2024/05/: Cargo.toml
2024/05/src/: 05.rs
2024/06/: Cargo.toml
2024/06/src/: 06.rs
2024/07/: Cargo.toml
2024/07/src/: 07.rs
2024/08/: Cargo.toml
2024/08/src/: 08.rs
2024/09/: Cargo.toml
2024/09/src/: 09.rs
2024/10/: Cargo.toml
2024/10/src/: 10.rs
2024/11/: Cargo.toml
2024/11/src/: 11.rs
2024/12/: Cargo.toml
2024/12/src/: 12.rs
2024/13/: Cargo.toml
2024/13/src/: 13.rs
2024/14/: Cargo.toml
2024/14/src/: 14.rs  coord.rs  modular.rs  orthant.rs
2024/15/: Cargo.toml
2024/15/src/: main.rs
2024/16/: Cargo.toml
2024/16/src/: direction.rs  main.rs
2024/17/: Cargo.toml
2024/17/bytecode-derive/: Cargo.toml
2024/17/bytecode-derive/src/: lib.rs
2024/17/bytecode/src/: lib.rs
2024/17/src/: instruction.rs  machine.rs  main.rs  part1.rs  part2.rs  puzzle.rs
2024/18/: Cargo.toml
2024/18/src/: find_path.rs  main.rs  part1.rs  part2.rs  puzzle.rs
2024/19/: Cargo.toml
2024/19/src/: main.rs  part1.rs  part2.rs  paths.rs  puzzle.rs
2024/20/: Cargo.toml
2024/20/src/: cheats.rs  main.rs  part1.rs  part2.rs  puzzle.rs
2024/21/: Cargo.toml
2024/21/src/: costs.rs  data.rs  direction.rs  directional_keypad.rs  keypad.rs  main.rs  numeric_keypad.rs  part1.rs  part2.rs  puzzle.rs
2024/22/: Cargo.toml
2024/22/src/: main.rs  part1.rs  part2.rs  puzzle.rs  secret.rs
2024/23/: Cargo.toml
2024/23/src/: part1.rs  part2.rs  puzzle.rs
2024/24/: Cargo.toml
2024/25/: Cargo.toml
bag/: Cargo.toml
bag/src/: lib.rs
direction/: Cargo.toml
direction/src/: lib.rs
point/: Cargo.toml
point/src/: lib.rs
position/: Cargo.toml
position/src/: lib.rs
template/src/: puzzle.rs
(+34 files in other folders)
