[workspace]
members = [
    "2024/01",
    "2024/02",
    "2024/03",
    "2024/04",
    "2024/05",
    "2024/06",
    "2024/07",
    "2024/08",
    "2024/09",
    "2024/10",
    "2024/11",
    "bag",
    "2024/12",
    "point",
    "2024/13",
    "2024/14",
    "2024/15",
    "2024/16",
    "direction",
    "position",
    "2024/17",
    "2024/17/bytecode",
    "2024/17/bytecode-derive"
]
resolver = "2"

[workspace.dependencies]
derive_more = "2"
game-grid = "0"
itertools = "0"
nom = "8"
num = "0"
parse-display = "0"
parse-display-with = "0"
direction = { version = "0.1.0", path = "direction" }
point = { version = "0.1.0", path = "point" }
position = { version = "0.1.0", path = "position" }
