[workspace]
resolver = "2"

members = [
    "bag",
    "direction",
    "point",
    "position",
    "2023/*",
    "2024/*",
    "2024/17/bytecode-derive",
    "2024/17/bytecode",
]

[workspace.dependencies]
derive_more = "2"
game-grid = "0"
itertools = "0"
nom = "8"
num = "0"
parse-display = "0"
parse-display-with = "0"
pathfinding = "4"
regex = "1"
bag = { version = "0.1.0", path = "bag" }
direction = { version = "0.1.0", path = "direction" }
point = { version = "0.1.0", path = "point" }
position = { version = "0.1.0", path = "position" }
